--- a/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
+++ b/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
@@ -43,15 +43,15 @@
             <button>
                 <span>
                     <img src="/img/Goal.png" alt="meta" />
-                    <a href="/BookBee/src/main/resources/templates/main.html#metaLeitura"></a>
-                    <span><a href="#">Metas</a></span>
+                    <a href="/livros/meta-de-leitura"></a>
+                    <span><a href="/livros/meta-de-leitura">Metas</a></span>
                 </span>
             </button>
 
             <button>
                 <span>
                     <img src="/img/Favorites.png" alt="Favoritos" />
-                    <span><a href="#">Favoritos</a></span>
+                    <span><a href="/livros/livros-favoritos">Favoritos</a></span>
                 </span>
             </button>
 
@@ -303,5 +303,5 @@
         
     </main>
     <script src="/js/modal.js"></script>
-    <script src="/js/favorita.js"></script>
+    <script src="/js/favoritar.js"></script>
 </body>
