--- a/BookBee/src/main/resources/templates/anotacoes/index.html
+++ b/BookBee/src/main/resources/templates/anotacoes/index.html
@@ -33,15 +33,15 @@
             <button>
                 <span>
                     <img src="/img/Goal.png" alt="meta">
-                    <a href="/BookBee/src/main/resources/templates/main.html#metaLeitura"></a>
-                    <span><a href="#">Metas</a></span>
+                    <a href="/livros/meta-de-leitura"></a>
+                    <span><a href="/livros/meta-de-leitura">Metas</a></span>
                 </span>
             </button>
 
             <button>
                 <span>
                     <img src="/img/Favorites.png" alt="Favoritos">
-                    <span><a href="#">Favoritos</a></span>
+                    <span><a href="/livros/livros-favoritos">Favoritos</a></span>
                 </span>
             </button>
 
