add as rota para a pagina do usuario

--- a/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
+++ b/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
@@ -80,7 +80,7 @@
 
     <main class="main">
         <div class="usuario">
-            <a href="#"><img src="/img/user.png" alt="Foto do Usuário" /></a>
+            <a href="/usuario/pagina-do-usuario"><img src="/img/user.png" alt="Foto do Usuário" /></a>
             <p id="username" th:text="${nomeUsuario}"></p>
         </div>
 
