--- a/BookBee/src/main/resources/templates/livros/index.html
+++ b/BookBee/src/main/resources/templates/livros/index.html
@@ -70,7 +70,7 @@
 
     <main class="main">
         <div class="usuario">
-            <a href="/BookBee/src/main/resources/templates/usuario.html"><img src="/img/user.png" alt="Foto do Usuário"></a>
+            <a href="/usuario/pagina-do-usuario"><img src="/img/user.png" alt="Foto do Usuário"></a>
             <p id="username" th:text="${nomeUsuario}"></p> 
         </div>
 
