--- a/BookBee/src/main/resources/templates/livros/metas.html
+++ b/BookBee/src/main/resources/templates/livros/metas.html
@@ -71,7 +71,7 @@
 
     <main class="main">
         <div class="usuario">
-            <a href="#"><img class="image" src="/img/user.png" alt="Foto do Usuário"></a>
+            <a href="/usuario/pagina-do-usuario"><img class="image" src="/img/user.png" alt="Foto do Usuário"></a>
             <p id="username" th:text="${nomeUsuario}">/p>
         </div>
 
@@ -111,3 +111,5 @@
     </main>
 
 </body>
+<script src="/js/busca.js"></script>
+</html>
