--- a/BookBee/src/main/resources/templates/anotacoes/index.html
+++ b/BookBee/src/main/resources/templates/anotacoes/index.html
@@ -70,7 +70,7 @@
 
     <main class="main">
         <div class="usuario">
-            <a href="#"><img src="/img/user.png" alt="Foto do Usuário"></a>
+            <a href="/usuario/pagina-do-usuario"><img src="/img/user.png" alt="Foto do Usuário"></a>
             <p id="username" th:text="${nomeUsuario}"></p>
         </div>
 
@@ -101,3 +101,5 @@
     </main>
 
 </body>
+<script src="/js/busca.js"></script>
+</html>
