--- a/BookBee/src/main/resources/static/css/style.css
+++ b/BookBee/src/main/resources/static/css/style.css
@@ -18,8 +18,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: #FFFBEB;
-
+    background: #fffbeb;
+    overflow-x: hidden;
 }
 
 .logo img{
@@ -49,6 +49,7 @@ body {
     padding-left: 97px;
     margin-top: 0px;
 }
+
 
 .cor1{
     color: #A7886C;
@@ -951,7 +952,7 @@ body {
     margin-top: -57px;
 }
 
-.container-carrossel{
+.container-carrossel{ 
     position: relative;
     padding: 15px;
     max-width: 970px;
@@ -970,7 +971,7 @@ body {
 }
 
 .gallery img{
-    width: 200px;
+    width: 165px;
     height: 240px;
     padding: 0px;
     border-radius: 5px;
@@ -1062,7 +1063,7 @@ body {
 }
 
 .carousel-gallery img{
-    width: 500px;
+    width: 165px;
     height: 250px;
     padding: 0px;
     border-radius: 5px;
@@ -2306,7 +2307,56 @@ h3 {
     font-size: 17px;
 }
 
+.container-titulo-error{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
 
+.container-titulo-error p{
+    flex-shrink: 0;
+    font-size: 150px;
+    text-shadow: 9px 6px 4px rgba(0, 0, 0, 0.13);
+}
+
+.container-livro{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-subtitulo-error{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-img{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2%;
+}
+
+.error{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -5%;
+}
+
+.error p{
+    font-size: 30px;
+    color: #ff0000;
+}
 
 /* responsivo */
 
@@ -2322,6 +2372,17 @@ h3 {
     .livro06{
         margin-right: 57%;
     }
+
+    .logofixamain {
+        margin-left: 30%;
+    }
+}
+
+@media only screen and (max-width: 1400px){
+
+    .logofixamain {
+        margin-left: 60%;
+    }
 }
 
 @media only screen and (max-width: 1310px){
@@ -2335,6 +2396,10 @@ h3 {
 
     .livro06{
         margin-right: 54%;
+    }
+
+    .logofixamain {
+        margin-left: 90%;
     }
 }
 
