--- a/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
+++ b/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
@@ -31,47 +31,51 @@
         <nav>
             <button>
                 <span>
-                    <!-- <img src="/BookBee/src/main/resources/static/img/Home.png" alt="home" />
-                    <a href="/BookBee/src/main/resources/templates/main.html"></a>
-                    <span><a href="/BookBee/src/main/resources/templates/main.html">Home</a></span> -->
-                    <img src="/img/Home.png" alt="home" />
-                    <a href="/livros/"></a>
-                    <span><a href="/livros/">Home</a></span>
+                    <a href="/livros/">
+                        <img src="/img/Home.png" alt="home">
+                    </a>
+                    <span class="nomes"><a href="/livros/">Home</a></span>
                 </span>
             </button>
-
+    
             <button>
                 <span>
-                    <img src="/img/Goal.png" alt="meta" />
-                    <a href="/livros/meta-de-leitura"></a>
-                    <span><a href="/livros/meta-de-leitura">Metas</a></span>
+                    <a href="/livros/meta-de-leitura">
+                        <img src="/img/Goal.png" alt="meta">
+                    </a>
+                    <span class="nomes"><a href="/livros/meta-de-leitura">Metas</a></span>
                 </span>
             </button>
-
+    
             <button>
                 <span>
-                    <img src="/img/Favorites.png" alt="Favoritos" />
-                    <span><a href="/livros/livros-favoritos">Favoritos</a></span>
+                    <a href="/livros/livros-favoritos">
+                        <img src="/img/Favorites.png" alt="Favoritos">
+                    </a>
+                    <span class="nomes"><a href="/livros/livros-favoritos">Favoritos</a></span>
                 </span>
             </button>
-
+    
             <button>
                 <span>
-                    <img src="/img/Quote.png" alt="Citações" />
-                    <span><a href="/notas/">Anotações</a></span>
+                    <a href="/notas/">
+                        <img src="/img/Quote.png" alt="Citações">
+                    </a>
+                    <span class="nomes"><a href="/notas/">Anotações</a></span>
                 </span>
             </button>
-
+    
             <button>
                 <span>
-                    <a href="/logout"></a>
-                    <img src="/img/Exit.png" alt="Sair" />
-                    <span><a href="/logout">Sair</a></span>
+                <a href="/logout">
+                    <img src="/img/Exit.png" alt="Sair">
+                </a>
+                    <span class="nomes"><a href="/logout">Sair</a></span>
                 </span>
             </button>
-
-            <div class="logomenu">->
-                <img src="/img/logomenu.png" alt="" />
+            
+            <div class="logomenu">
+                <img src="/img/logomenu.png" alt="">
             </div>
 
             <div class="linha"></div>
