--- a/BookBee/src/main/resources/templates/favoritos.html
+++ b/BookBee/src/main/resources/templates/favoritos.html
@@ -22,46 +22,51 @@
         <nav>
             <button>
                 <span>
-                    <img src="/BookBee/src/main/resources/static/img/Home.png" alt="home">
-                    <a href="/BookBee/src/main/resources/templates/main.html"></a>
-                    <span><a href="/BookBee/src/main/resources/templates/main.html">Home</a></span>
+                    <a href="/livros/">
+                        <img src="/img/Home.png" alt="home">
+                    </a>
+                    <span class="nomes"><a href="/livros/">Home</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
-                    <img src="/BookBee/src/main/resources/static/img/Goal.png" alt="meta">
-                    <a href="/BookBee/src/main/resources/templates/metas.html"></a>
-                    <span><a href="/BookBee/src/main/resources/templates/metas.html">Metas</a></span>
+                    <a href="/livros/meta-de-leitura">
+                        <img src="/img/Goal.png" alt="meta">
+                    </a>
+                    <span class="nomes"><a href="/livros/meta-de-leitura">Metas</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
-                    <img src="/BookBee/src/main/resources/static/img/Favorites.png" alt="Favoritos">
-                    <a href="/BookBee/src/main/resources/templates/favoritos.html"></a>
-                    <span><a href="/BookBee/src/main/resources/templates/favoritos.html">Favoritos</a></span>
+                    <a href="/livros/livros-favoritos">
+                        <img src="/img/Favorites.png" alt="Favoritos">
+                    </a>
+                    <span class="nomes"><a href="/livros/livros-favoritos">Favoritos</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
-                    <img src="/BookBee/src/main/resources/static/img/Quote.png" alt="Citações">
-                    <a href="/BookBee/src/main/resources/templates/notas.html"></a>
-                    <span><a href="/BookBee/src/main/resources/templates/notas.html">Anotações</a></span>
+                    <a href="/notas/">
+                        <img src="/img/Quote.png" alt="Citações">
+                    </a>
+                    <span class="nomes"><a href="/notas/">Anotações</a></span>
                 </span>
             </button>
     
             <button>
                 <span>
-                    <img src="/BookBee/src/main/resources/static/img/Exit.png" alt="Sair">
-                    <a href="/BookBee/src/main/resources/templates/home.html"></a>
-                    <span><a href="/BookBee/src/main/resources/templates/home.html">Sair</a></span>
+                <a href="/logout">
+                    <img src="/img/Exit.png" alt="Sair">
+                </a>
+                    <span class="nomes"><a href="/logout">Sair</a></span>
                 </span>
             </button>
             
             <div class="logomenu">
-                <img src="/BookBee/src/main/resources/static/img/logomenu.png" alt="">
+                <img src="/img/logomenu.png" alt="">
             </div>
 
             <div class="linha"></div>
