--- a/BookBee/src/main/resources/templates/cadastro.html
+++ b/BookBee/src/main/resources/templates/cadastro.html
@@ -52,12 +52,12 @@
 
         </div>
 
-            <div class="container-img-mobile-cas">
+            <!-- <div class="container-img-mobile-cas">
                 <div class="img-mobile-cas">
                     <img src="/img/homeMobile.png" alt="">
                 </div>
             </div>
-    
+     -->
 
     <div class="container-cadastro">
         <div class="livro04">
