--- a/BookBee/src/main/resources/templates/login.html
+++ b/BookBee/src/main/resources/templates/login.html
@@ -21,6 +21,11 @@
     </aside>
     <main>
 
+        <!-- <div class="container-img-mobile-logcas">
+            <div class="img-mobile-logcas">
+                <img src="/img/homeMobile.png" alt="">
+            </div>
+        </div> -->
         
         <div class="container-form-login">
             <div class="titulogin">
@@ -57,11 +62,6 @@
 
         </div>
 
-        <div class="container-img-mobile-logcas">
-            <div class="img-mobile-logcas">
-                <img src="/img/homeMobile.png" alt="">
-            </div>
-        </div>
     
     <div class="container-login">
         <div class="livro01">
