--- a/BookBee/src/main/resources/templates/home.html
+++ b/BookBee/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 
 <body>
     
-    <main>
+    <main class="home">
         <div class="logo">
             <img src="/img/logo.png" alt="logo">
         </div>
