--- a/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
+++ b/BookBee/src/main/resources/templates/livros/detalhesdolivro.html
@@ -82,6 +82,66 @@
         </nav>
     </aside>
 
+    <!-- menu mobile -->
+
+    <button class="button-mobile">
+        <i class="material-symbols"> menu </i>
+        <span>Mneu</span>
+    </button>
+
+    <nav class="menu-mobile">
+        <button>
+            <span>
+                <i class="material-symbols"> close </i>
+            </span>
+        </button>
+
+        <button>
+            <span>
+                <a href="/livros/">
+                    <img src="/img/Home.png" alt="home">
+                </a>
+                <span class="nomes-mobile"><a href="/livros/">Home</a></span>
+            </span>
+        </button>
+
+        <button>
+            <span>
+                <a href="/livros/meta-de-leitura">
+                    <img src="/img/Goal.png" alt="meta">
+                </a>
+                <span class="nomes-mobile"><a href="/livros/meta-de-leitura">Metas</a></span>
+            </span>
+        </button>
+
+        <button>
+            <span>
+                <a href="/livros/livros-favoritos">
+                    <img src="/img/Favorites.png" alt="Favoritos">
+                </a>
+                <span class="nomes-mobile"><a href="/livros/livros-favoritos">Favoritos</a></span>
+            </span>
+        </button>
+
+        <button>
+            <span>
+                <a href="/notas/">
+                    <img src="/img/Quote.png" alt="Citações">
+                </a>
+                <span class="nomes-mobile"><a href="/notas/">Anotações</a></span>
+            </span>
+        </button>
+
+        <button>
+            <span>
+            <a href="/logout">
+                <img src="/img/Exit.png" alt="Sair">
+            </a>
+                <span class="nomes-mobile"><a href="/logout">Sair</a></span>
+            </span>
+        </button>
+    </nav>
+
     <main class="main">
         <div class="usuario">
             <a href="/usuario/pagina-do-usuario"><img src="/img/user.png" alt="Foto do Usuário" /></a>
