--- a/BookBee/src/main/resources/static/css/style.css
+++ b/BookBee/src/main/resources/static/css/style.css
@@ -3152,7 +3152,7 @@ h3 {
 @media only screen and (max-width: 500px){
   
   .logo{
-    width: 110%;
+    width: 100%;
     display: flex;
     align-items: end;
     justify-content: end;
@@ -3174,6 +3174,11 @@ h3 {
   .titulo{
     margin-left: 12%;
   }
+
+  .titulo p{
+    padding-left: 5px;
+    font-size: 125px;
+  }
     .cor1{
     font-size: 110px;
    }
@@ -3188,9 +3193,13 @@ h3 {
 
    .text-mobile{
     display: block;
-    margin-left: 172px;
+    margin-left: 100px;
     width: 370px;
     font-size: 18px;
+   }
+
+   .botoes {
+    padding-left: 100px;
    }
 
 .container-img-mobile{
@@ -3251,7 +3260,7 @@ h3 {
         padding-left: 726px;
         font-size: 100px;
         margin-top: 130px;
-        margin-left: 6%;
+        margin-left: 3%;
     }
     
     .formlogin{
@@ -3260,11 +3269,17 @@ h3 {
     }
     
     .cadastre {
-        padding-left: 50px;
+        width: 300px;
+        padding-left: 0px;
+        align-items: normal;
+    }
+
+    .botaologin1  {
+        float: none;
     }
     
     .containerlogo {
-        margin-right: 12%;
+        margin-right: 42%;
     }
 
     .formlogin input {
@@ -3377,13 +3392,22 @@ h3 {
     }
 
     .formlogin input {
-        width: 373px;
+        width: 303px;
     }
 
     .formcadastro form {
         margin-left: 761px;
         margin-top: 80px;
     }
+    
+    .formcadastro input {
+        width: 303px;
+    }
+
+    .titulocas p {
+        font-size: 80px;
+    }
+    
 
     .botaocadastro1 {
         padding-left: 878px;
@@ -3402,10 +3426,7 @@ h3 {
         margin-left: 98%;
     }
 
-    .formcadastro form {
-        margin-left: 733px;
-        margin-top: 80px;
-    }
+
 
     .botaocadastro1 {
         padding-left: 856px;
@@ -3414,12 +3435,12 @@ h3 {
 
 @media only screen and (max-width: 450px){
     .formlogin form{
-        margin-left: 852px;
+        margin-left: 800px;
     }
 
     .formlogin i{
         top: -43px;
-        margin-left: 103%;
+        margin-left: 80%;
     }
 
     .logofixa {
@@ -3459,7 +3480,8 @@ h3 {
     }
 
     .formlogin i{
-        margin-left: 114%;
+        top: -33px;
+        margin-left: 80%;
     }
 
     .botaologin1 {
@@ -3470,10 +3492,7 @@ h3 {
         width: 152%;
     }
 
-    .formcadastro form {
-        margin-left: 690px;
-        margin-top: 80px;
-    }
+   
 
     .botaocadastro1 {
         padding-left: 813px;
@@ -3602,6 +3621,6 @@ h3 {
      
 @media only screen and (max-width: 370px){
     .formlogin i {
-        margin-left: 146%;
+        margin-left: 108%;
     }
 }
