--- a/BookBee/src/main/resources/templates/usuario/index.html
+++ b/BookBee/src/main/resources/templates/usuario/index.html
@@ -85,7 +85,7 @@
         <div class="container-perfil">
             <div class="perfil">
               <button class="perfil-img">
-                <a href="/BookBee/src/main/resources/templates/confUsuario.html"><img src="/img/perfil.png" alt=""></a>
+                <a href="/usuario/configuracoes"><img src="/img/perfil.png" alt=""></a>
               </button>
               <h3>Olá, <span th:text="${nomeUsuario}"></span>!</h3>
             </div>
