--- a/BookBee/src/main/resources/templates/login.html
+++ b/BookBee/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +17,8 @@
     <aside>
         <div class="containerlogo">
             <div class="logofixa">
-            <img src="/img/logo.png" alt="logo">
-        </div>
+                <img src="/img/logo.png" alt="logo">
+            </div>
     </aside>
     <main>
 
@@ -26,57 +27,56 @@
                 <img src="/img/homeMobile.png" alt="">
             </div>
         </div> -->
-        
+
         <div class="container-form-login">
             <div class="titulogin">
                 <p><span class="cor01">Book</span><span class="cor02">Bee</span></p>
             </div>
             <div class="formlogin">
                 <form method="post" action="/logar">
-        
+
                     <label for="E-mail">E-mail</label>
                     <input type="email" name="email" placeholder="Insira seu E-mail" id="email" required>
-                    
+
                     <label for="senha">Senha</label>
                     <input type="password" id="senha" name="senha" placeholder="Insira sua Senha" required>
                     <i class="bi bi-eye-fill" id="botao-senha" onclick="mostrarSenha()"></i>
-        
+
                     <div class="cadastre">
                         <ul>
                             <li>
                                 <span class="cores">Não Cadastrado? </span>
                                 <a href="/cadastro">
                                     Crie sua conta!</a>
-                                </li>
+                            </li>
                         </ul>
-                        <p th:if="${erro != null}"
-                        th:text="${erro}"
-                        class="errp-login"></p>
+                        <p th:if="${erro != null}" th:text="${erro}" class="errp-login"></p>
                     </div>
                     <div class="botaologin1">
                         <button type="submit"><a>Login</a></button>
                         </a>
                     </div>
                 </form>
-             </div>
+            </div>
 
         </div>
 
-    
-    <div class="container-login">
-        <div class="livro01">
-            <img src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">    
-            <p>Contos</p>
+
+        <div class="container-login">
+            <div class="livro01">
+                <img src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+                <p>Contos</p>
+            </div>
+            <div class="livro02">
+                <img src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+                <p>Poesias</p>
+            </div>
+            <div class="livro03">
+                <img src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">
+                <p>Não-Ficção</p>
+            </div>
         </div>
-        <div class="livro02">
-            <img src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">   
-            <p>Poesias</p>
-        </div>
-        <div class="livro03">
-            <img src="/img/icons8-favos-de-mel-48.png" alt="hexagonos">    
-            <p>Não-Ficção</p>
-        </div>
-    </div>
     </main>
 </body>
+
 </html>
